force-app/main/default/objects/ReimbursementDetail__c/ReimbursementDetail__c.object-meta.xml
<CustomObject>
    <label>弁償・立替</label>
    <nameField>
        <displayFormat>RED-{00000000}</displayFormat>
        <label>弁償・立替#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>