force-app/main/default/objects/ReimbursementDetail__c/fields/AccountInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountInvoiceNumber__c</fullName>
    <label>荷主請求番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>