force-app/main/default/objects/ReimbursementDetail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>ReimbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>