force-app/main/default/objects/ReimbursementDetail__c/fields/Consignor__c.field-meta.xml
<CustomField>
    <fullName>Consignor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ConsignorReimbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>