force-app/main/default/objects/ReimbursementDetail__c/fields/OffsetAdvance__c.field-meta.xml
<CustomField>
    <fullName>OffsetAdvance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>相殺立替</label>
    <type>Checkbox</type>
</CustomField>