force-app/main/default/objects/ReimbursementDetail__c/fields/OffsetForDamage__c.field-meta.xml
<CustomField>
    <fullName>OffsetForDamage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>相殺破損</label>
    <type>Checkbox</type>
</CustomField>