force-app/main/default/objects/ReimbursementDetail__c/fields/PaymentDeadline__c.field-meta.xml
<CustomField>
    <fullName>PaymentDeadline__c</fullName>
    <label>支払期限日</label>
    <type>Date</type>
</CustomField>