force-app/main/default/objects/ReimbursementDetail__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipName>ReimbursementDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>