force-app/main/default/objects/ReimbursementDetail__c/fields/ReimbursementComment__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementComment__c</fullName>
    <label>弁償コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>