force-app/main/default/objects/ReimbursementDetail__c/fields/SubContractor__c.field-meta.xml
<CustomField>
    <fullName>SubContractor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>下請け業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SubContractorReimbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>