force-app/main/default/objects/ReimbursementDetail__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>税率</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable10</fullName>
                <default>true</default>
                <label>10%課税</label>
            </value>
            <value>
                <fullName>Taxable８</fullName>
                <label>8%課税</label>
            </value>
            <value>
                <fullName>NonTaxable</fullName>
                <label>非課税</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>