force-app/main/default/objects/ReimbursementDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consignor__c</columns>
    <columns>SubContractor__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>Amount__c</columns>
    <columns>OffsetForDamage__c</columns>
    <columns>OffsetAdvance__c</columns>
    <columns>PaymentDeadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>